@@ -15,6 +15,18 @@
   </properties>
 
   <dependencies>
+    <!-- Spring Boot -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.14</version>
+    </dependency>
+
     <!-- ADK -->
     <dependency>
       <groupId>com.google.adk</groupId>
@@ -49,6 +61,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.14.0</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>com.squareup.okhttp3</groupId>
       <artifactId>okhttp</artifactId>
       <version>4.9.3</version>
@@ -77,7 +96,6 @@
           <target>21</target>
           <encoding>UTF-8</encoding>
           <compilerArgs>
-            <arg>--enable-preview</arg>
             <arg>-parameters</arg>
           </compilerArgs>
         </configuration>
